responsive navbar and work this done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <div class="nav-img">
+                <img src="Images/Group_40071.png" alt="">
+                <h3>Hero <span class="travel">Travel</span> </h3>
+            </div>
+            <ul>
+                <li><a href="" class="home">Home</a></li>
+                <li><a href="">Packages</a></li>
+                <li><a href="">Testimonial</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
