--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hero travel project responsive</title>
+    <!-- fontawesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
+    <!-- header section start -->
     <header>
         <nav>
             <div class="nav-img">
@@ -22,13 +30,65 @@
             </ul>
         </nav>
     </header>
+    <!-- header section end -->
 
     <main>
+        <!-- banner section start -->
+        <!-- <section>
+            <div class="banner">
+                <div class="banner-container">
+                    <div class="banner-text-container">
+                        <h2 class="banner-title">Explore Your Travel</h2>
+                        <P class="text-light-gray">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
+                            adipiscing. In et odio <br>
+                            enim ac quis sapien urna eu phasellus.</P>
+                        <div class="banner-input-section">
+                            <input type="text" placeholder="Where go">
+                            <select name="" id="">
+                                <option value="when" selected>When</option>
+                            </select>
+                            <select name="" id="">
+                                <option value="select type" selected>Select Type</option>
+                            </select>
+                            <button class="btn-primary"><i class="fa-solid fa-magnifying-glass"></i> Find Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> -->
+        <!-- banner section end -->
 
+
+        <!-- popular section start -->
+        <section>
+            <div class="popular">
+                <div class="popular-container">
+                    <div class="popular-text-section">
+                        <h2 class="section-title">Our Popular Tours</h2>
+                        <p class="text-primary">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio
+                            sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                        <li class="text-primary">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam
+                            odio neque diam. Sociis erat at .</li>
+                        <li class="text-primary">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea
+                            porta lacus. Lectus suspendisse nullam.</li>
+                        <li class="text-primary">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea
+                            porta lacus. Lectus suspendisse nullam.</li>
+                        <p class="text-primary">Amet consectetur. Vulputate commodo felis molestie risus
+                            ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing
+                            risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                        <button class="btn-primary">Read More</button>
+                    </div>
+                    <div class="popular-img-section">
+                        <img src="Images/Rectangle_4.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
 
     </footer>
 </body>
+
 </html>
