grid img section complete

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <main>
         <!-- banner section start -->
-        <!-- <section>
+        <section>
             <div class="banner">
                 <div class="banner-container">
                     <div class="banner-text-container">
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- banner section end -->
 
 
@@ -79,9 +79,39 @@
                         <button class="btn-primary">Read More</button>
                     </div>
                     <div class="popular-img-section">
-                        <img src="Images/Rectangle_4.png" alt="">
+                        <img class="popular-img" src="Images/Rectangle_4.png" alt="">
                     </div>
                 </div>
+            </div>
+        </section>
+        <!-- popular section end -->
+
+
+        <section>
+            <div class="gird-img-container">
+                <div class="grid-text-container">
+                    <h3 class="section-title">Choose Your Destination</h3>
+                    <p class="text-primary">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+                </div>
+              <div class="img-section1">
+                <img class="one" src="Images/Rectangle_5.png" alt="">
+                <img class="tow" src="Images/Rectangle_9.png" alt="">
+              </div>
+
+              <div class="img-section2">
+                <img class="three" src="Images/Rectangle_6.png" alt="">
+                <img class="four" src="Images/Rectangle_7.png" alt="">
+                <img class="five" src="Images/Rectangle_10.png" alt="">
+              </div>
+
+              <div class="img-section3">
+                <img class="six" src="Images/Rectangle_12.png" alt="">
+                <img class="seven" src="Images/Rectangle_11.png" alt="">
+
+              </div>
+
+              
+
             </div>
         </section>
     </main>
