choose section working

--- a/index.html
+++ b/index.html
@@ -86,34 +86,61 @@
         </section>
         <!-- popular section end -->
 
-
+        <!-- grid img section start -->
         <section>
             <div class="gird-img-container">
                 <div class="grid-text-container">
                     <h3 class="section-title">Choose Your Destination</h3>
-                    <p class="text-primary">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+                    <p class="text-primary">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
+                        massa. <br> Sodales dictumst nec nibh pellentesque.</p>
                 </div>
-              <div class="img-section1">
-                <img class="one" src="Images/Rectangle_5.png" alt="">
-                <img class="tow" src="Images/Rectangle_9.png" alt="">
-              </div>
+                <div class="img-section1">
+                    <img class="one" src="Images/Rectangle_5.png" alt="">
+                    <img class="tow" src="Images/Rectangle_9.png" alt="">
+                </div>
 
-              <div class="img-section2">
-                <img class="three" src="Images/Rectangle_6.png" alt="">
-                <img class="four" src="Images/Rectangle_7.png" alt="">
-                <img class="five" src="Images/Rectangle_10.png" alt="">
-              </div>
+                <div class="img-section2">
+                    <img class="three" src="Images/Rectangle_6.png" alt="">
+                    <img class="four" src="Images/Rectangle_7.png" alt="">
+                    <img class="five" src="Images/Rectangle_10.png" alt="">
+                </div>
 
-              <div class="img-section3">
-                <img class="six" src="Images/Rectangle_12.png" alt="">
-                <img class="seven" src="Images/Rectangle_11.png" alt="">
-
-              </div>
-
-              
-
+                <div class="img-section3">
+                    <img class="six" src="Images/Rectangle_12.png" alt="">
+                    <img class="seven" src="Images/Rectangle_11.png" alt="">
+                </div>
             </div>
         </section>
+         <!-- grid img section end -->
+
+         <!-- choose section start -->
+         <section>
+            <div class="choose">
+                <div class="choose-container">
+                    <div class="choose-text-container">
+                        <h3 class="section-title">Why Choose Us</h3>
+                        <p class="text-primary">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. 
+                            <br> Sodales dictumst nec nibh pellentesque.</p>
+                    </div>
+
+                    <div class="choose-card-section">
+                        <div class="choose-card-one">
+                            <img src="Images/hotel_1.png" alt="">
+                            <h4 class="section-title">Handpicked Hotels</h4>
+                            <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                        </div>
+
+                        <div class="choose-card-two">
+                            <img src="Images/Group_27.png" alt="">
+                            <h4 class="section-title">Handpicked Hotels</h4>
+                            <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </section>
+         <!-- choose section end -->
+
     </main>
 
     <footer>
