choose section complete

--- a/index.html
+++ b/index.html
@@ -126,15 +126,21 @@
                     <div class="choose-card-section">
                         <div class="choose-card-one">
                             <img src="Images/hotel_1.png" alt="">
-                            <h4 class="section-title">Handpicked Hotels</h4>
+                            <h4 class="card-title">Handpicked Hotels</h4>
                             <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                         </div>
 
                         <div class="choose-card-two">
                             <img src="Images/Group_27.png" alt="">
-                            <h4 class="section-title">Handpicked Hotels</h4>
+                            <h4 class="card-title">World Class Service</h4>
                             <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                         </div>
+                    </div>
+
+                    <div class="choose-card-inner">
+                        <img src="Images/Group_26.png" alt="">
+                        <h4 class="card-title">Best Price Guarantee</h4>
+                        <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                     </div>
                 </div>
             </div>
