footer section complete

--- a/index.html
+++ b/index.html
@@ -147,10 +147,45 @@
          </section>
          <!-- choose section end -->
 
+         <!-- newsletter section start -->
+         <section>
+            <div class="newsletter">
+                <div class="newsletter-container">
+                    <div class="newsletter-form">
+                        <h3 class="card-title">Newsletter</h3>
+                        <p class="card-description">Get your daily dose of travel news & tips. Sign <br> up today!</p>
+                        <hr>
+                        <input type="text" placeholder="Enter your name">
+                        <input type="email" placeholder="Enter your email">
+                        <button class="suscribe-btn" >Subscribe</button>
+                    </div>
+                    <div class="news-letter-img-section">
+                        <div class="newsletter-img">
+                            <img src="Images/Rectangle_8.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </section>
+         <!-- newsletter section end -->
+
     </main>
 
     <footer>
-
+        <div class="footer-container">
+           <div class="footer-header-img">
+            <img src="Images/Group_40071.png" alt="">
+            <h3>Hero <span class="travel-span">Travel</span></h3>
+           </div>
+          <p class="card-description"> Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo <br> erat maecenas vitae elementum ultricies nullam.</p> 
+          <div class="footer-icons">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
+          </div>
+          <hr>
+          <p class="rights">2017, All Rights Reserved.</p>
+        </div>
     </footer>
 </body>
 
